Tests/CompilerTests/negative/invalid-redeclaration.hylo
//! no-std

fun f(x: Void, y: Void, x: Void) {}

fun g(x: Void) {
  let x = ()
  let y = ()
  let y = ()
}
